--- a/about.html
+++ b/about.html
@@ -65,12 +65,7 @@
                 </li>
                 <li>
                     <a href="index.html#sponsors-id">
-                        <h4>Contact Us</h4>
-                    </a>
-                </li>
-                <li>
-                    <a>
-                        <h4 class="menu-last-item">Submissions</h4>
+                        <h4 class="menu-last-item">Contact Us</h4>
                     </a>
                 </li>
             </ul>
@@ -106,19 +101,7 @@
                 </li>
                 <li>
                     <a href="#guests-id" id="onclick-guests">
-                        <h4>Organization</h4>
-                    </a>
-                    <hr>
-                </li>
-                <li>
-                    <a href="index.html#sponsors-id" id="onclick-sponsors">
-                        <h4 class="menu-last-item">Submissions</h4>
-                    </a>
-                    <hr>
-                </li>  
-                <li>
-                    <a id="onclick-compaign">
-                        <h4>Submission</h4>
+                        <h4 class="menu-last-item">Organization</h4>
                     </a>
                     <hr>
                 </li>
@@ -127,12 +110,36 @@
     </header>
     <section class="header" id="header-id">
         <h2 id="hello">"Welcome to the AMIA 2025"</h2>
-        <h1>NLP Working Group Pre-Symposium</h1>
-        <p>Graduate Student Consortium, Career Panel, State-of-the-art Biomedical and Clinical NLP session, and Generative AI in Health Systems Panel</p>
+        <h1>AMIA 2025 NLP Working Group Pre-Symposium</h1>
+        <!-- <p>Graduate Student Consortium, Career Panel, State-of-the-art Biomedical and Clinical NLP session, and Generative AI in Health Systems Panel</p>
         <p>Please contact us per Email for any further questions about AMIA NLP WG!</p>
-        <a href="mailto:zhan1386@umn.edu">zhan1386@umn.edu</a>
+        <a href="mailto:zhan1386@umn.edu">zhan1386@umn.edu</a> -->
     </section>
     <hr class="section-hr">
+    
+    <div style="background-color: #f8f9fa; padding: 30px 20px; text-align: center; margin: 0;">
+        <div style="max-width: 1200px; margin: 0 auto;">
+            <a href="index.html#submissions-id" 
+               style="display: inline-block; 
+                      background: linear-gradient(135deg, #eba134 0%, #f4c965 100%); 
+                      color: white; 
+                      padding: 18px 40px; 
+                      text-decoration: none; 
+                      border-radius: 50px; 
+                      font-weight: 700; 
+                      font-size: 18px;
+                      font-family: 'Lato', sans-serif;
+                      text-transform: uppercase;
+                      letter-spacing: 1px;
+                      box-shadow: 0 8px 25px rgba(235, 161, 52, 0.3);
+                      transition: all 0.3s ease;
+                      border: none;"
+               onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 12px 35px rgba(235, 161, 52, 0.4)'" 
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 8px 25px rgba(235, 161, 52, 0.3)'">
+                📝 Submit Your Paper
+            </a>
+        </div>
+    </div>
     
     <section class="guests" id="guests-id">
         <h2>Organization</h2>
@@ -148,7 +155,7 @@
     <section class="past-events" id="past-events-id">
         <h2>See the past AMIA NLP events</h2>
         <hr>
-        <p>Take a look at the past AMIA NLP WG events</p>
+        <!-- <p>Take a look at the past AMIA NLP WG events</p> -->
         <div>
             <a href="https://ohnlp.github.io/AMIANLPWG2018/NLP-WG.html"> 
                 <h3>2021</h3>
