--- a/index.html
+++ b/index.html
@@ -109,12 +109,7 @@
                 </li>
                 <li>
                     <a href="#contact-id">
-                        <h4>Contact Us</h4>
-                    </a>
-                </li>
-                <li>
-                    <a href="#submissions-id">
-                        <h4 class="menu-last-item">Submissions</h4>
+                        <h4 class="menu-last-item">Contact Us</h4>
                     </a>
                 </li>
             </ul>
@@ -153,22 +148,40 @@
                         <h4 class="menu-last-item">Submission and Review</h4>
                     </a>
                     <hr>
-                </li>  
-                <li>
-                    <a href="#submissions-id" id="onclick-compaign">
-                        <h4>Submission</h4>
-                    </a>
-                    <hr>
                 </li>
             </ul>
         </nav>
     </header>
     <section class="header-section" id="header-id">
         <div class="header">
-            <h2 id="hello">Welcome to the AMIA 2025</h2>
+            <h2 id="hello">AMIA 2025</h2>
             <h1>NLP Working Group Pre-Symposium</h1>
             <h2 id="date">Nov 16, 2025</h2>
             <h2 id="location">Atlanta, GA</h2>
+        </div>
+    </section>
+
+    <section style="background-color: #f8f9fa; padding: 30px 20px; text-align: center; margin: 0;">
+        <div style="max-width: 1200px; margin: 0 auto;">
+            <a href="#submissions-id" 
+               style="display: inline-block; 
+                      background: linear-gradient(135deg, #eba134 0%, #f4c965 100%); 
+                      color: white; 
+                      padding: 18px 40px; 
+                      text-decoration: none; 
+                      border-radius: 50px; 
+                      font-weight: 700; 
+                      font-size: 18px;
+                      font-family: 'Lato', sans-serif;
+                      text-transform: uppercase;
+                      letter-spacing: 1px;
+                      box-shadow: 0 8px 25px rgba(235, 161, 52, 0.3);
+                      transition: all 0.3s ease;
+                      border: none;"
+               onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 12px 35px rgba(235, 161, 52, 0.4)'" 
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 8px 25px rgba(235, 161, 52, 0.3)'">
+                📝 Submit Your Paper
+            </a>
         </div>
     </section>
 
@@ -281,13 +294,18 @@ technologies, especially in health systems (and adjunct industries).</p>
         .events p {
             max-width: 1200px;
             margin: 0 auto;
-            font-size: 16px;
+            font-size: 22px;
             line-height: 1.8;
             text-align: justify;
             font-family: 'Lato', sans-serif;
-            font-weight: 400;
+            font-weight: 500;
             letter-spacing: 0.3px;
             word-spacing: 1px;
+            color: #f0f0f0;
+            background-color: rgba(0, 0, 0, 0.75);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
 
         /* Program Section Special Styling */
@@ -486,12 +504,16 @@ technologies, especially in health systems (and adjunct industries).</p>
             /* Responsive Introduction Text */
             .events p {
                 max-width: 100%;
-                font-size: 15px;
+                font-size: 20px;
                 line-height: 1.7;
                 text-align: left;
-                padding: 0 10px;
+                padding: 25px 15px;
                 letter-spacing: 0.2px;
                 word-spacing: 0.5px;
+                color: #ffffff;
+                background-color: rgba(0, 0, 0, 0.7);
+                border-radius: 8px;
+                margin: 0 10px;
             }
             
             /* Responsive Program Table */
@@ -545,7 +567,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td>Graduate Student Presentation 1</td>
                 <td>TBD</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>TBD</td>
                 <td>Graduate Student Presentation 2</td>
                 <td>TBD</td>
@@ -554,7 +576,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td>TBD</td>
                 <td>Graduate Student Presentation 3</td>
                 <td>TBD</td>
-            </tr>
+            </tr> -->
             <tr class="subsession-header">
                 <td colspan="3">1b) Career Panel</td>
             </tr>
@@ -563,7 +585,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td>TBD</td>
                 <td>TBD</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
@@ -572,7 +594,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
-            </tr>
+            </tr> -->
             <!-- <tr>
                 <td>8:45 – 9:00am</td>
                 <td>Interpretable Differential Diagnosis with Dual-Inference LLMs</td>
@@ -613,7 +635,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td>TBD</td>
                 <td>TBD</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
@@ -622,7 +644,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
-            </tr>
+            </tr> -->
             <!-- <tr>
                 <td>10:45 – 11:00am</td>
                 <td>Approximate Randomization Technique for Comparing Performance Between Demographic Subgroups</td>
@@ -661,11 +683,11 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td>TBD</td>
                 <td>TBD</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
-            </tr>
+            </tr> -->
         </table>
     </section>
 
@@ -767,7 +789,8 @@ technologies, especially in health systems (and adjunct industries).</p>
     </section>
 
     <section class="guests" id="contact-id">
-        <h2>AMIA NLP Working Group Contact</h2>
+        <!-- <h2>AMIA NLP Working Group Contact</h2> -->
+        <h2>Contact Us</h2>
         <hr>
         <p>Chair: Rui Zhang, PhD:<a href="mailto:zhan1386@umn.edu"> zhan1386@umn.edu</a></p>
         <p>Vice Chair: Sunyang Fu, PhD:<a href="mailto:Sunyang.Fu@uth.tmc.edu"> Sunyang.Fu@uth.tmc.edu</a></p>
