--- a/index.html
+++ b/index.html
@@ -211,19 +211,15 @@
             <h1 style="
                 font-size: clamp(2.5rem, 6vw, 4rem);
                 font-weight: 700;
-                background: linear-gradient(45deg, #eba134, #f4c965, #eba134);
-                background-size: 200% 200%;
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-                background-clip: text;
+                color: #7A0019;
                 margin-bottom: 30px;
                 letter-spacing: 2px;
                 text-transform: uppercase;
-                animation: slideInDown 1.2s ease-out, gradientShift 3s ease-in-out infinite;
-            ">AMIA 2025 NLP Working Group Pre-Symposium</h1>
+                animation: slideInDown 1.2s ease-out;
+            ">AMIA 2025 NLP Working Group Pre-Symposium Workshop</h1>
             <h2 id="date" style="
                 font-size: clamp(1.5rem, 4vw, 2.5rem);
-                color: #f4c965;
+                color: #ffffff;
                 font-weight: 600;
                 margin: 20px 0;
                 text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
@@ -237,6 +233,14 @@
                 text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
                 animation: fadeInUp 1.8s ease-out 0.6s both;
             ">Atlanta, GA</h2>
+            <h2 id="time-location" style="
+                font-size: clamp(1.1rem, 3vw, 1.8rem);
+                color: #ffffff;
+                font-weight: 500;
+                margin: 15px 0;
+                text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+                animation: fadeInUp 2.1s ease-out 0.9s both;
+            ">8:30 AM – 12:00 PM | Room 14</h2>
         </div>
         
         <style>
@@ -1166,7 +1170,7 @@ technologies, especially in health systems (and adjunct industries).</p>
         <p style="margin-left: 40px; padding-left: 20px;">All submissions have a page limit of <span style="color: red; font-weight: bold;">2 pages</span> using <span style="color: red; font-weight: bold;"><a href="https://brand.amia.org/m/95c9b4f4632c1fe/original/amia-symposium-template-paper-poster.docx" style="color: red;">AMIA Template</a></span></p>
         
         <div style="text-align: center; margin: 30px 0;">
-            <a href="https://easychair.org/conferences/?conf=amia2025nlpwg" 
+            <a href="https://easychair.org/my/conference?conf=amianlp2025" 
                style="display: inline-block; 
                       background-color: #eba134; 
                       color: white; 
@@ -1236,7 +1240,7 @@ technologies, especially in health systems (and adjunct industries).</p>
         <!-- <h2>AMIA NLP Working Group Contact</h2> -->
         <h2>Contact Us</h2>
         <hr>
-        <p>Chair: Rui Zhang, PhD:<a href="mailto:zhan1386@umn.edu"> zhan1386@umn.edu</a></p>
+        <p>Rui Zhang:<a href="mailto:ruizhang@umn.edu"> ruizhang@umn.edu</a></p>
         <!-- <p>Vice Chair: Sunyang Fu, PhD:<a href="mailto:Sunyang.Fu@uth.tmc.edu"> Sunyang.Fu@uth.tmc.edu</a></p>
         <p>Past Chair: Yanshan Wang, PhD, FAMIA:<a href="mailto:yanshan.wang@pitt.edu"> yanshan.wang@pitt.edu</a></p>
         <p>Member-at-Large: Sujani Kakumanu, MD:<a href="mailto:kakumanu@wisc.edu"> kakumanu@wisc.edu</a></p>
