add official link

--- a/index.html
+++ b/index.html
@@ -100,9 +100,14 @@
             </a>  
         </nav>
         <nav class="header-tab">
-            <a href="index.html" class="logo">
-                <img src="src/logo.png" alt="Website logo">
-            </a>
+            <div style="display: flex; align-items: center; gap: 15px;">
+                <a href="index.html" class="logo">
+                    <img src="src/logo.png" alt="Website logo">
+                </a>
+                <a href="https://twitter.com/amiaNLPwg" target="_blank" style="display: flex; align-items: center; padding: 8px; border-radius: 50%; background-color: rgba(235, 161, 52, 0.1); transition: all 0.3s ease;" onmouseover="this.style.backgroundColor='rgba(235, 161, 52, 0.2)'; this.style.transform='scale(1.1)'" onmouseout="this.style.backgroundColor='rgba(235, 161, 52, 0.1)'; this.style.transform='scale(1)'">
+                    <img src="src/twitter.png" alt="Twitter icon" style="width: 28px; height: 28px;">
+                </a>
+            </div>
             <div class="menu-button">
                 <a id="onclick-open">
                     <img src="src/menu-icon.svg" alt="Menu icon"/>
@@ -1263,6 +1268,26 @@ technologies, especially in health systems (and adjunct industries).</p>
             MORE
             <img src="src/down-arrow.png" alt="Arrow">
         </button>
+        
+        <div style="text-align: center; margin: 30px 0;">
+            <a href="https://amia.org/community/working-groups/natural-language-processing" 
+               target="_blank"
+               style="display: inline-block; 
+                      background: linear-gradient(135deg, #eba134 0%, #f4c965 100%); 
+                      color: white; 
+                      padding: 15px 30px; 
+                      text-decoration: none; 
+                      border-radius: 8px; 
+                      font-weight: bold; 
+                      font-size: 16px;
+                      font-family: 'Lato', sans-serif;
+                      transition: all 0.3s ease;
+                      border: none;"
+               onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 20px rgba(235, 161, 52, 0.3)'" 
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
+                🔗 Visit Official AMIA NLP Working Group Page
+            </a>
+        </div>
     </section>
 
     <section class="guests" id="past-events-id">
