--- a/index.html
+++ b/index.html
@@ -350,9 +350,8 @@ and tools (e.g., trained machine learning algorithms) require creative solutions
 many research teams have succeeded in developing novel biomedical and clinical NLP methods, creating and then
 sharing resources based on clinical text in a thoughtful and sustainable manner. Despite the legal specifics surrounding
 patient data, NLP-based technologies have permeated clinical and translational research. Our general objective with
-this pre-symposium is (1a) to provide a platform for the next generation of biomedical NLP scientists to get focused
-feedback on their in-progress graduate work from a panel of senior academicians, (1b) to provide experience and
-suggestions regarding career development in biomedical NLP field, (2) provide a forum for people to present their
+this pre-symposium is to (1) provide a platform for the next generation of biomedical NLP scientists to get focused
+feedback on their in-progress graduate work from a panel of senior academicians, (2) provide a forum for people to present their
 state-of-the-art NLP and LLM work, providing awareness and opportunities for networking and collaboration within
 the AMIA NLP community, and (3) to discuss promises and challenges related to the emerging generative AI
 technologies, especially in health systems (and adjunct industries).</p> 
@@ -1025,129 +1024,135 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <th>Speaker</th>
             </tr>
             <tr>
-                <td>8:20 – 8:30am</td>
-                <td>Welcome to AMIA 2025 NLP Working Group Pre-symposium</td>
-                <td>Rui Zhang, AMIA NLP WG Chair, University of Minnesota</td>
+                <td>8:30 – 8:35 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Welcome to AMIA 2025 NLP Working Group Pre-symposium</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Rui Zhang, AMIA NLP WG Chair</span> <br> <span style="color:gray;">University of Minnesota</span>
+                </td>
             </tr>
             <tr class="session-header">    
                 <td colspan="3">Session 1 – Educational & Career Development<br>Session Chair: TBD</td>
             </tr>
             <tr class="subsession-header">
-                <td colspan="3">1a) Graduate Student Consortium</td>
+                <td colspan="3">Graduate Student Consortium</td>
             </tr>
             <tr>
-                <td>TBD</td>
-                <td>Graduate Student Presentation 1</td>
-                <td>TBD</td>
-            </tr>
-            <!-- <tr>
-                <td>TBD</td>
-                <td>Graduate Student Presentation 2</td>
-                <td>TBD</td>
-            </tr>
-            <tr>
-                <td>TBD</td>
-                <td>Graduate Student Presentation 3</td>
-                <td>TBD</td>
-            </tr> -->
-            <tr class="subsession-header">
-                <td colspan="3">1b) Career Panel</td>
+                <td>8:35 - 8:50 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Context Matching is not Reasoning: Assessing MCQA-Based Evaluation of Generative Language Models in Clinical Settings</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Andrew Wen and Hongfang Liu</span> <br> <span style="color:gray;">University of Texas Health Science Center at Houston</span>
+                </td>
             </tr>
             <tr>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
-            </tr>
-            <!-- <tr>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
-            </tr>
-            <tr>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
-            </tr> -->
-            <!-- <tr>
-                <td>8:45 – 9:00am</td>
-                <td>Interpretable Differential Diagnosis with Dual-Inference LLMs</td>
-                <td>Shuang Zhou, University of Minnesota</td>
+                <td>8:50 - 9:05 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Identifying Federal Pain Research Priorities in NIH Funded Research Grant Abstracts Using Seed-Guided NLP Algorithms</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Zhe Zhao, Anthony F. Domenichiello and V.G.Vinod Vydiswaran</span> <br> <span style="color:gray;">University of Michigan</span>
+                </td>
             </tr>
             <tr>
-                <td>9:00 – 9:15am</td>
-                <td>Generative Large Language Models in Electronic Health Records for Patient Care Since 2023: A Systematic Review</td>
-                <td>Xinsong Du, Brigham and Women's Hospital and Harvard Medical School</td>
+                <td>9:05 - 9:20 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Expanding Suicide-SDoH Coverage from Death Investigation Narratives</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Geoffrey Martin and Yifan Peng</span> <br> <span style="color:gray;">Weill Cornell Medicine</span>
+                </td>
             </tr>
             <tr>
-                <td>9:15 – 9:30am</td>
-                <td>Improving postsurgical fall detection for older Americans using LLM-driven analysis of clinical narratives</td>
-                <td>Malvika Pillai, VA Palo Alto & Stanford School of Medicine</td>
+                <td>9:20 - 9:35 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Context-Aware Clinical Natural Language Processing</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Kurt Miller and Hongfang Liu</span> <br> <span style="color:gray;">University of Texas Health Science Center at Houston</span>
+                </td>
             </tr>
             <tr>
-                <td>9:30 – 9:45am</td>
-                <td>Deep Learning for Detecting Cancer Recurrence and Metastasis in Radiology Imaging Reports</td>
-                <td>Lucas Liu, Fred Hutch Cancer Center</td>
+                <td>9:35 - 9:50 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Advancing Personalized Oncology Treatment Planning with Large Language Models</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Mengxian Lyu and Yonghui Wu</span> <br> <span style="color:gray;">University of Florida</span>
+                </td>
             </tr>
             <tr>
-                <td>9:45 – 10:00am</td>
-                <td>LLMs Cannot Beat Traditional ML Models in Clinical Prediction Yet</td>
-                <td>Canyu Chen, Illinois Institute of Technology</td>
-            </tr> -->
+                <td>9:50 - 10:05 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Embedding Privacy Controls and Testing to Prevent Personal Health Information (PHI) Leakage in Clinical Foundation Model Workflows</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Dalton Simancek and Vg Vinod Vydiswaran</span> <br> <span style="color:gray;">University of Michigan</span>
+                </td>
+            </tr>
             <tr class="break-row">
-                <td>10:00 – 10:30am</td>
+                <td>10:05 – 10:25 am</td>
                 <td colspan="2">Coffee Break</td>
             </tr>
             <tr class="session-header">
                 <td colspan="3">Session 2 – State-of-the-art Biomedical and Clinical NLP<br>Session Chair: TBD</td>
             </tr>
             <tr>
-                <!-- <td>10:30 – 10:45am</td>
-                <td>Exposing Vulnerabilities in Clinical Language Models</td>
-                <td>Avisha Das, Mayo Clinic Arizona</td> -->
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
-            </tr>
-            <!-- <tr>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td>10:25 – 10:35 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Clinical Decision Support for Dementia: Large Language Models Enhance ADRD Risk Prediction from Electronic Health Records</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Jiakun Wang</span> <br> <span style="color:gray;">University of Michigan</span>
+                </td>
             </tr>
             <tr>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
-            </tr> -->
-            <!-- <tr>
-                <td>10:45 – 11:00am</td>
-                <td>Approximate Randomization Technique for Comparing Performance Between Demographic Subgroups</td>
-                <td>Paul Heider, Medical University of South Carolina</td>
+                <td>10:35 – 10:45 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Overview of the ArchEHR-QA 2025 Shared Task on Grounded Question Answering from Electronic Health Records at the BioNLP Workshop at ACL</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Sarvesh Soni</span> <br> <span style="color:gray;">National Library of Medicine, National Institutes of Health</span>
+                </td>
             </tr>
             <tr>
-                <td>11:00 – 11:15am</td>
-                <td>Natural Language Processing for Assessing Transparency of Clinical Trial Publications</td>
-                <td>Joe Menke, University of Illinois Urbana-Champaign</td>
+                <td>10:45 – 10:55 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Automating Expert-Level Medical Reasoning Evaluation of LLMs</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Shuang Zhou</span> <br> <span style="color:gray;">University of Minnesota</span>
+                </td>
             </tr>
             <tr>
-                <td>11:15 – 11:30am</td>
-                <td>A Privacy-preserving Approach to Ingest Knowledge from Proprietary Web-based to Locally Run Models for Medical Progress Note Generation</td>
-                <td>Sarvesh Soni, U.S. National Library of Medicine</td>
+                <td>10:55 – 11:05 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">GENIE: Generative Note Information Extraction model for structuring EHR data</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Huaiyuan Ying</span> <br> <span style="color:gray;">Tsinghua University</span>
+                </td>
             </tr>
             <tr>
-                <td>11:30 – 11:45am</td>
-                <td>Sex and Age Biases in ChatGPT-4 and LLaVA for Skin Disease Identification</td>
-                <td>Zhiyu Wan, Vanderbilt University Medical Center</td>
+                <td>11:05 – 11:15 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Efficient and Scalable Retrieval in Knowledge Graphs: From Single-Graph to Partitioned Multi-Graph Approaches</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">He Cheng</span> <br> <span style="color:gray;">University of Colorado</span>
+                </td>
             </tr>
             <tr>
-                <td>11:45 – 12:00pm</td>
-                <td>Advancing Digital Health Equity and Inclusiveness: Leveraging Large Language Models to Accelerate Literature Review</td>
-                <td>Taylor Harrison, Mayo Clinic</td>
+                <td>11:15 – 11:25 am</td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Identifying and Characterizing Gallstone Disease from Clinical Narratives with Zero-shot Learning and Automated Prompt Optimization</span>
+                </td>
+                <td style="text-align:center;">
+                    <span style="font-weight:bold;">Sy Hwang</span> <br> <span style="color:gray;">University of Pennsylvania</span>
+                </td>
             </tr>
-            <tr>
-                <td>12:00 – 12:15pm</td>
-                <td>Toward Large Language Models as a Therapeutic Tool: Comparing Prompting Techniques to Improve GPT-Delivered Problem-Solving Therapy</td>
-                <td>Daniil Filienko, University of Washington Tacoma</td>
-            </tr> -->
             <tr class="session-header">
                 <td colspan="3">Session 3 – Generative AI in Health Systems<br>Session Chair: TBD</td>
             </tr>
