--- a/index.html
+++ b/index.html
@@ -1033,11 +1033,11 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr class="session-header">    
-                <td colspan="3">Session 1 – Educational & Career Development<br>Session Chair: TBD</td>
+                <td colspan="3">Session 1 – Graduate Student Consortium<br>Session Chair: TBD</td>
             </tr>
-            <tr class="subsession-header">
+            <!-- <tr class="subsession-header">
                 <td colspan="3">Graduate Student Consortium</td>
-            </tr>
+            </tr> -->
             <tr>
                 <td>8:35 - 8:50 am</td>
                 <td style="text-align:center;">
@@ -1093,14 +1093,14 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr class="break-row">
-                <td>10:05 – 10:25 am</td>
+                <td>10:05 – 10:20 am</td>
                 <td colspan="2">Coffee Break</td>
             </tr>
             <tr class="session-header">
                 <td colspan="3">Session 2 – State-of-the-art Biomedical and Clinical NLP<br>Session Chair: TBD</td>
             </tr>
             <tr>
-                <td>10:25 – 10:35 am</td>
+                <td>10:20 – 10:30 am</td>
                 <td style="text-align:center;">
                     <span style="font-weight:bold;">Clinical Decision Support for Dementia: Large Language Models Enhance ADRD Risk Prediction from Electronic Health Records</span>
                 </td>
@@ -1109,7 +1109,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr>
-                <td>10:35 – 10:45 am</td>
+                <td>10:30 – 10:40 am</td>
                 <td style="text-align:center;">
                     <span style="font-weight:bold;">Overview of the ArchEHR-QA 2025 Shared Task on Grounded Question Answering from Electronic Health Records at the BioNLP Workshop at ACL</span>
                 </td>
@@ -1118,7 +1118,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr>
-                <td>10:45 – 10:55 am</td>
+                <td>10:40 – 10:50 am</td>
                 <td style="text-align:center;">
                     <span style="font-weight:bold;">Automating Expert-Level Medical Reasoning Evaluation of LLMs</span>
                 </td>
@@ -1127,7 +1127,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr>
-                <td>10:55 – 11:05 am</td>
+                <td>10:50 – 11:00 am</td>
                 <td style="text-align:center;">
                     <span style="font-weight:bold;">GENIE: Generative Note Information Extraction model for structuring EHR data</span>
                 </td>
@@ -1136,7 +1136,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr>
-                <td>11:05 – 11:15 am</td>
+                <td>11:00 – 11:10 am</td>
                 <td style="text-align:center;">
                     <span style="font-weight:bold;">Efficient and Scalable Retrieval in Knowledge Graphs: From Single-Graph to Partitioned Multi-Graph Approaches</span>
                 </td>
@@ -1145,7 +1145,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr>
-                <td>11:15 – 11:25 am</td>
+                <td>11:10 – 11:20 am</td>
                 <td style="text-align:center;">
                     <span style="font-weight:bold;">Identifying and Characterizing Gallstone Disease from Clinical Narratives with Zero-shot Learning and Automated Prompt Optimization</span>
                 </td>
