--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,47 @@ technologies, especially in health systems (and adjunct industries).</p>
                 font-size: 20px;
             }
         }
+
+        /* Session header avatars and text case override */
+        .session-header { text-transform: none !important; }
+        .session-header td .avatars {
+            display: inline-flex;
+            align-items: flex-start;
+            gap: 12px;
+            margin-left: 10px;
+            vertical-align: middle;
+            flex-wrap: wrap;
+        }
+        .session-header td .avatar-item {
+            display: inline-flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+        .session-header td .avatar {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            object-fit: cover;
+            background: #ffffff;
+            border: 2px solid rgba(255, 255, 255, 0.9);
+            box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+        }
+        .session-header td .avatar-caption {
+            margin-top: 6px;
+            font-size: 13px;
+            line-height: 1.4;
+        }
+        .session-header td .avatar-caption small {
+            font-size: 10px;
+            line-height: 1.3;
+            display: inline-block;
+        }
+        @media (max-width: 768px) {
+            .session-header td .avatar { width: 64px; height: 64px; }
+            .session-header td .avatar-caption { font-size: 12px; line-height: 1.4; }
+            .session-header td .avatar-caption small { font-size: 9px; line-height: 1.3; }
+        }
     </style>
     
     <section class="program-section" id="program-id">
@@ -1033,7 +1074,33 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr class="session-header">    
-                <td colspan="3">Session 1 – Graduate Student Consortium<br>Session Chair: TBD</td>
+                <td colspan="3">
+                Session 1 – Graduate Student Consortium<br>
+                Session Chair: Sunyang Fu <br>
+                Faculty Mentors: Hua Xu, Chunhua Weng, Ramakanth Kavuluru, and Timothy Miller<br><br>
+                <span class="avatars">
+                    <!-- <span class="avatar-item">
+                        <img class="avatar" src="src/sunyang2.jpg" alt="Sunyang Fu">
+                        <span class="avatar-caption">Sunyang Fu<br><small>Assistant Professor<br>University of Texas Health Science Center at Houston</small></span>
+                    </span> -->
+                    <span class="avatar-item">
+                        <img class="avatar" src="src/xuhua.png" alt="Hua Xu">
+                        <span class="avatar-caption">Hua Xu<br><small>Professor and Vice Chair for<br>Research and Development, Assistant<br>Dean for Biomedical Informatics,<br>Yale School of Medicine</small></span>
+                    </span>
+                    <span class="avatar-item">
+                        <img class="avatar" src="src/chunhuaweng.png" alt="Chunhua Weng">
+                        <span class="avatar-caption">Chunhua Weng<br><small>Professor of Biomedical Informatics<br>Columbia University</small></span>
+                    </span>
+                    <span class="avatar-item">
+                        <img class="avatar" src="src/RamakanthKavuluru.png" alt="Ramakanth Kavuluru">
+                        <span class="avatar-caption">Ramakanth Kavuluru<br><small>Professor of Internal Medicine<br>University of Kentucky</small></span>
+                    </span>
+                    <span class="avatar-item">
+                        <img class="avatar" src="src/TimothyMiller.png" alt="Timothy Miller">
+                        <span class="avatar-caption">Timothy Miller<br><small>Associate Professor of Pediatrics<br>Harvard Medical School</small></span>
+                    </span>
+                </span>
+                </td>
             </tr>
             <!-- <tr class="subsession-header">
                 <td colspan="3">Graduate Student Consortium</td>
@@ -1044,7 +1111,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Context Matching is not Reasoning: Assessing MCQA-Based Evaluation of Generative Language Models in Clinical Settings</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Andrew Wen and Hongfang Liu</span> <br> <span style="color:gray;">University of Texas Health Science Center at Houston</span>
+                    <span style="font-weight:bold;">Andrew Wen</span> <br> <span style="color:gray;">University of Texas Health Science Center at Houston</span>
                 </td>
             </tr>
             <tr>
@@ -1053,7 +1120,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Identifying Federal Pain Research Priorities in NIH Funded Research Grant Abstracts Using Seed-Guided NLP Algorithms</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Zhe Zhao, Anthony F. Domenichiello and V.G.Vinod Vydiswaran</span> <br> <span style="color:gray;">University of Michigan</span>
+                    <span style="font-weight:bold;">Zhe Zhao</span> <br> <span style="color:gray;">University of Michigan</span>
                 </td>
             </tr>
             <tr>
@@ -1062,7 +1129,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Expanding Suicide-SDoH Coverage from Death Investigation Narratives</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Geoffrey Martin and Yifan Peng</span> <br> <span style="color:gray;">Weill Cornell Medicine</span>
+                    <span style="font-weight:bold;">Geoffrey Martin</span> <br> <span style="color:gray;">Weill Cornell Medicine</span>
                 </td>
             </tr>
             <tr>
@@ -1071,7 +1138,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Context-Aware Clinical Natural Language Processing</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Kurt Miller and Hongfang Liu</span> <br> <span style="color:gray;">University of Texas Health Science Center at Houston</span>
+                    <span style="font-weight:bold;">Kurt Miller</span> <br> <span style="color:gray;">University of Texas Health Science Center at Houston</span>
                 </td>
             </tr>
             <tr>
@@ -1080,7 +1147,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Advancing Personalized Oncology Treatment Planning with Large Language Models</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Mengxian Lyu and Yonghui Wu</span> <br> <span style="color:gray;">University of Florida</span>
+                    <span style="font-weight:bold;">Mengxian Lyu</span> <br> <span style="color:gray;">University of Florida</span>
                 </td>
             </tr>
             <tr>
@@ -1089,7 +1156,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Embedding Privacy Controls and Testing to Prevent Personal Health Information (PHI) Leakage in Clinical Foundation Model Workflows</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Dalton Simancek and Vg Vinod Vydiswaran</span> <br> <span style="color:gray;">University of Michigan</span>
+                    <span style="font-weight:bold;">Dalton Simancek</span> <br> <span style="color:gray;">University of Michigan</span>
                 </td>
             </tr>
             <tr class="break-row">
@@ -1097,7 +1164,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                 <td colspan="2">Coffee Break</td>
             </tr>
             <tr class="session-header">
-                <td colspan="3">Session 2 – State-of-the-art Biomedical and Clinical NLP<br>Session Chair: TBD</td>
+                <td colspan="3">Session 2 – State-of-the-art Biomedical and Clinical NLP<br>Session Chair: TBD <br><span class="avatars"><!-- Add images like: <img class='avatar' src='src/people/chair2.jpg' alt='Chair Name'> --></span></td>
             </tr>
             <tr>
                 <td>10:20 – 10:30 am</td>
@@ -1154,18 +1221,30 @@ technologies, especially in health systems (and adjunct industries).</p>
                 </td>
             </tr>
             <tr class="session-header">
-                <td colspan="3">Session 3 – Generative AI in Health Systems<br>Session Chair: TBD</td>
+                <td colspan="3">Session 3 – Generative AI in Health Systems<br>Session Moderator: Rui Zhang<br><span class="avatars"><!-- Add images like: <img class='avatar' src='src/people/chair3.jpg' alt='Chair Name'> --></span></td>
             </tr>
             <tr>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
+                <td colspan="3" style="text-align:center; border-right: none; background-color: white;">
+                    <span style="display:inline-flex; justify-content:center; align-items:flex-start; gap:16px; flex-wrap:wrap; margin-top:8px;">
+                        <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
+                            <img src="src/Wendy Chapman.png" alt="Wendy Chapman" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Wendy Chapman<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Dean of Health Informatics<br>Chief Learning Health Officer for<br>UT Southwestern Health System</small></span>
+                        </span>
+                        <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
+                            <img src="src/Hongfang Liu.png" alt="Hongfang Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Hongfang Liu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Professor at McWilliams School of Biomedical<br>Informatics and serves as Vice President<br>of Learning Health System<br>UTHealth Houston</small></span>
+                        </span>
+                        <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
+                            <img src="src/Yiye Zhang.png" alt="Yiye Zhang" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yiye Zhang<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Professor of health informatics at<br>Weill Cornell Medicine, Informatics Director<br>of Clinical Decision Support at<br>NewYork-Presbyterian Hospital,<br>editor-in-chief, npj Health Systems</small></span>
+                        </span>
+                        <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
+                            <img src="src/Nan Liu.png" alt="Nan Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Nan Liu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Professor at the Centre for<br>Quantitative Medicine (CQM) and Programme in<br>Health Services and Systems Research (HSSR),<br>Duke-NUS Medical School</small></span>
+                        </span>
+                    </span>
+                </td>
             </tr>
-            <!-- <tr>
-                <td>TBD</td>
-                <td>TBD</td>
-                <td>TBD</td>
-            </tr> -->
         </table>
     </section>
 
