--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Welcome to AMIA 2025 NLP Working Group Pre-symposium</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Rui Zhang, AMIA NLP WG Chair</span> <br> <span style="color:gray;">University of Minnesota</span>
+                    <span style="font-weight:bold;">Rui Zhang<br>AMIA NLP WG Chair</span> <br> <span style="color:gray;">University of Minnesota</span>
                 </td>
             </tr>
             <tr class="session-header">    
@@ -1111,7 +1111,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Context Matching is not Reasoning: Assessing MCQA-Based Evaluation of Generative Language Models in Clinical Settings</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Andrew Wen</span> <br> <span style="color:gray;">University of Texas Health Science Center at Houston</span>
+                    <span style="font-weight:bold;">Andrew Wen</span> <br> <span style="color:gray;">University of Texas<br>Health Science Center at Houston</span>
                 </td>
             </tr>
             <tr>
@@ -1138,7 +1138,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Context-Aware Clinical Natural Language Processing</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Kurt Miller</span> <br> <span style="color:gray;">University of Texas Health Science Center at Houston</span>
+                    <span style="font-weight:bold;">Kurt Miller</span> <br> <span style="color:gray;">University of Texas<br>Health Science Center at Houston</span>
                 </td>
             </tr>
             <tr>
@@ -1181,7 +1181,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Overview of the ArchEHR-QA 2025 Shared Task on Grounded Question Answering from Electronic Health Records at the BioNLP Workshop at ACL</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Sarvesh Soni</span> <br> <span style="color:gray;">National Library of Medicine, National Institutes of Health</span>
+                    <span style="font-weight:bold;">Sarvesh Soni</span> <br> <span style="color:gray;">National Library of Medicine,<br>National Institutes of Health</span>
                 </td>
             </tr>
             <tr>
