--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@ technologies, especially in health systems (and adjunct industries).</p>
             padding: 20px;
             border: none;
             border-bottom: 1px solid #e8e9ea;
-            vertical-align: top;
+            vertical-align: middle;
             transition: all 0.3s ease;
             font-size: 16px;
             font-family: 'Lato', sans-serif;
