--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                         </span>
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
                             <img src="src/yonghuiwu.png" alt="Nan Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
-                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yonghui Wu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Professor with Tenure<br>Department of Health Outcomes<br>& Biomedical Informatics<br>College of Medicine at University of Florida</small></span>
+                            <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yonghui Wu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Chief Data Scientist & Associate Professor<br>Department of Health Outcomes<br>& Biomedical Informatics<br>College of Medicine at University of Florida</small></span>
                         </span>
                     </span>
                 </td>
