--- a/index.html
+++ b/index.html
@@ -1092,11 +1092,11 @@ technologies, especially in health systems (and adjunct industries).</p>
                         <span class="avatar-caption">Chunhua Weng<br><small>Professor of Biomedical Informatics<br>Columbia University</small></span>
                     </span>
                     <span class="avatar-item">
-                        <img class="avatar" src="src/RamakanthKavuluru.png" alt="Ramakanth Kavuluru">
+                        <img class="avatar" src="src/RamakanthKavuluru_2.png" alt="Ramakanth Kavuluru">
                         <span class="avatar-caption">Ramakanth Kavuluru<br><small>Professor of Internal Medicine<br>University of Kentucky</small></span>
                     </span>
                     <span class="avatar-item">
-                        <img class="avatar" src="src/TimothyMiller.png" alt="Timothy Miller">
+                        <img class="avatar" src="src/TimothyMiller_2.png" alt="Timothy Miller">
                         <span class="avatar-caption">Timothy Miller<br><small>Associate Professor of Pediatrics<br>Harvard Medical School</small></span>
                     </span>
                 </span>
@@ -1231,7 +1231,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                             <span style="margin-top:6px; font-size:15px; line-height:1.4;">Wendy Chapman<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Dean of Health Informatics<br>Chief Learning Health Officer for<br>UT Southwestern Health System</small></span>
                         </span>
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
-                            <img src="src/Hongfang Liu.png" alt="Hongfang Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
+                            <img src="src/Hongfang Liu_2.png" alt="Hongfang Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
                             <span style="margin-top:6px; font-size:15px; line-height:1.4;">Hongfang Liu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Professor at McWilliams School of Biomedical<br>Informatics and serves as Vice President<br>of Learning Health System<br>UTHealth Houston</small></span>
                         </span>
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
@@ -1239,7 +1239,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                             <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yiye Zhang<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Associate Professor of health informatics at<br>Weill Cornell Medicine, Informatics Director<br>of Clinical Decision Support at<br>NewYork-Presbyterian Hospital,<br>editor-in-chief, npj Health Systems</small></span>
                         </span>
                         <span style="display:inline-flex; flex-direction:column; align-items:center; text-align:center;">
-                            <img src="src/yonghuiwu.png" alt="Nan Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
+                            <img src="src/yonghuiwu_2.png" alt="Nan Liu" style="width:100px; height:100px; border-radius:50%; object-fit:cover; background:#ffffff; border:2px solid rgba(255,255,255,0.9); box-shadow:0 1px 2px rgba(0,0,0,0.15);">
                             <span style="margin-top:6px; font-size:15px; line-height:1.4;">Yonghui Wu<br><small style="font-size:11px; line-height:1.3; display:inline-block;">Chief Data Scientist & Associate Professor<br>Department of Health Outcomes<br>& Biomedical Informatics<br>College of Medicine at University of Florida</small></span>
                         </span>
                     </span>
