--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@ technologies, especially in health systems (and adjunct industries).</p>
                     <span style="font-weight:bold;">Clinical Decision Support for Dementia: Large Language Models Enhance ADRD Risk Prediction from Electronic Health Records</span>
                 </td>
                 <td style="text-align:center;">
-                    <span style="font-weight:bold;">Jiakun Wang</span> <br> <span style="color:gray;">University of Michigan</span>
+                    <span style="font-weight:bold;">Jiankun Wang</span> <br> <span style="color:gray;">University of Michigan</span>
                 </td>
             </tr>
             <tr>
